# Claw2Cline

./: .clinerules  .gitignore  README.md  pyproject.toml  test_cli_features.py
doc/: readme.md  todo.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: run_tests.py
src/: __init__.py  __main__.py  cli.py  clientd.py  config.py  protocol.py  server.py
test/: test_cli.py  test_clientd.py  test_config.py  test_protocol.py  test_server.py
