[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw2cline"
version = "0.1.0"
description = "WebSocket Bridge for OpenClaw to Cline orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
  {name = "Claw2Cline Team"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "black>=23.0",
  "isort>=5.0",
  "mypy>=1.0",
]

[project.scripts]
claw2cline = "src.cli:main"
claw2cline-server = "src.server:main"
claw2cline-clientd = "src.clientd:main"

[tool.setuptools.packages.find]
where = [".", "test"]
include = ["src*", "test*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true